--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <!-- Navigation menu -->
         <nav>
             <ul class="nav-links">
-                <li><a href="index1.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="index2.html">About</a></li>
                 <li><a href="index3.html">Contact</a></li>
             </ul>
